// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block route > getAll > should get all 1`] = `
{
  "blocks": [
    {
      "blobAsCalldataGasUsed": 255000,
      "blobGasPrice": 22n,
      "blobGasUsed": 5500000,
      "excessBlobGas": 15000,
      "hash": "blockHash002",
      "number": 1002,
      "slot": 102,
      "timestamp": 2023-08-26T12:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1300,
              },
              "blobHash": "blobHash004",
              "index": 0,
            },
          ],
          "fromId": "address1",
          "hash": "txHash004",
          "toId": "address3",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1400,
              },
              "blobHash": "blobHash005",
              "index": 0,
            },
          ],
          "fromId": "address2",
          "hash": "txHash005",
          "toId": "address4",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1500,
              },
              "blobHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
              "index": 0,
            },
          ],
          "fromId": "address5",
          "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
          "toId": "address6",
        },
      ],
    },
    {
      "blobAsCalldataGasUsed": 250000,
      "blobGasPrice": 20n,
      "blobGasUsed": 5000000,
      "excessBlobGas": 10000,
      "hash": "blockHash001",
      "number": 1001,
      "slot": 101,
      "timestamp": 2023-08-24T10:00:00.000Z,
      "transactions": [
        {
          "blobs": [
            {
              "blob": {
                "size": 1000,
              },
              "blobHash": "blobHash001",
              "index": 0,
            },
          ],
          "fromId": "address1",
          "hash": "txHash001",
          "toId": "address2",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1100,
              },
              "blobHash": "blobHash002",
              "index": 0,
            },
          ],
          "fromId": "address3",
          "hash": "txHash002",
          "toId": "address4",
        },
        {
          "blobs": [
            {
              "blob": {
                "size": 1200,
              },
              "blobHash": "blobHash003",
              "index": 0,
            },
          ],
          "fromId": "address5",
          "hash": "txHash003",
          "toId": "address6",
        },
      ],
    },
  ],
  "totalBlocks": 0,
}
`;

exports[`Block route > getAll > should get all with pagination 1`] = `
{
  "blocks": [],
  "totalBlocks": 0,
}
`;

exports[`Block route > getByBlockNumber > should get by hash 1`] = `
{
  "blobAsCalldataGasUsed": 255000,
  "blobGasPrice": 22n,
  "blobGasUsed": 5500000,
  "excessBlobGas": 15000,
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 2023-08-26T12:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "blob": {
            "size": 1300,
          },
          "blobHash": "blobHash004",
          "index": 0,
        },
      ],
      "fromId": "address1",
      "hash": "txHash004",
      "toId": "address3",
    },
    {
      "blobs": [
        {
          "blob": {
            "size": 1400,
          },
          "blobHash": "blobHash005",
          "index": 0,
        },
      ],
      "fromId": "address2",
      "hash": "txHash005",
      "toId": "address4",
    },
    {
      "blobs": [
        {
          "blob": {
            "size": 1500,
          },
          "blobHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
          "index": 0,
        },
      ],
      "fromId": "address5",
      "hash": "0x5be77167b05f39ea8950f11b0da2bdfec6e04055030068b051ac5a43aaf251e9",
      "toId": "address6",
    },
  ],
}
`;

exports[`Block route > getByHash > should get by hash 1`] = `
{
  "blobAsCalldataGasUsed": 250000,
  "blobGasPrice": 20n,
  "blobGasUsed": 5000000,
  "excessBlobGas": 10000,
  "hash": "blockHash001",
  "number": 1001,
  "slot": 101,
  "timestamp": 2023-08-24T10:00:00.000Z,
  "transactions": [
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
      ],
      "fromId": "address1",
      "hash": "txHash001",
      "toId": "address2",
    },
    {
      "blobs": [
        {
          "blob": {
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 0,
        },
      ],
      "fromId": "address3",
      "hash": "txHash002",
      "toId": "address4",
    },
    {
      "blobs": [
        {
          "blob": {
            "size": 1200,
          },
          "blobHash": "blobHash003",
          "index": 0,
        },
      ],
      "fromId": "address5",
      "hash": "txHash003",
      "toId": "address6",
    },
  ],
}
`;
